attached_assets/Pasted-2025-05-28T03-43-18Z-info-Deployment-86391ddc-c684-4527-976b-e2e3917650ce-2025-05-28T03-43-18Z-inf-1748404214504.txt
2025-05-28T03:43:18Z info: Deployment: 86391ddc-c684-4527-976b-e2e3917650ce
2025-05-28T03:43:18Z info: Build: e7148b01-4052-47a4-a1ee-5f3898347205
2025-05-28T03:43:18Z info: Connecting to builder
2025-05-28T03:43:22Z info: Builder connected
2025-05-28T03:43:22Z info: Installing packages
--> npm install


added 46 packages, removed 15 packages, changed 8 packages, and audited 827 packages in 18s

2025-05-28T03:43:41Z info: Starting Build

> vite_react_shadcn_ts@0.0.0 build
> vite build


NODE_ENV=production is not supported in the .env file. Only NODE_ENV=development is supported to create a development build of your project. If you need to set process.env.NODE_ENV, you can set it in the Vite config instead.

vite v5.4.10 building for production...

transforming...

Browserslist: browsers data (caniuse-lite) is 7 months old. Please run:
  npx update-browserslist-db@latest
  Why you should do it regularly: https://github.com/browserslist/update-db#readme

node_modules/bluebird/js/release/util.js (165:2): Use of eval in "node_modules/bluebird/js/release/util.js" is strongly discouraged as it poses security risks and may cause issues with minification.

✓ 4267 modules transformed.

computing gzip size...

dist/index.html                     0.67 kB │ gzip:   0.39 kB

✓ built in 17.00s

Environment variables loaded from .env

Prisma schema loaded from prisma/schema.prisma


✔ Generated Prisma Client (v6.8.2) to ./node_modules/@prisma/client in 150ms

Start by importing your Prisma Client (See: https://pris.ly/d/importing-client)

Tip: Interested in query caching in just a few lines of code? Try Accelerate today! https://pris.ly/tip-3-accelerate


Environment variables loaded from .env

Datasource "db": PostgreSQL database "neondb", schema "public" at "ep-weathered-band-a64zfol1.us-west-2.aws.neon.tech"


The database is already in sync with the Prisma schema.


Running generate... (Use --skip-generate to skip the generators)
Running generate... - Prisma Client
✔ Generated Prisma Client (v6.8.2) to ./node_modules/@prisma/client in 153ms

2025-05-28T03:44:13Z info: Pushing pid1 binary layer...
2025-05-28T03:44:14Z info: Pushing Repl layer...
2025-05-28T03:44:14Z info: Retrieved cached nix layer
2025-05-28T03:44:14Z info: Created hosting layer
2025-05-28T03:44:15Z info: Created pid1 binary layer
2025-05-28T03:44:49Z info: Created Repl layer
2025-05-28T03:44:50Z info: Pushed image manifest
2025-05-28T03:44:51Z info: Pushed soci index manifest
2025-05-28T03:44:55Z info: Creating Autoscale service
import { Client, LocalAuth, MessageMedia } from 'whatsapp-web.js';
npm notice To update run: npm install -g npm@11.4.1
npm warn exec The following package was not found and will be installed: tsx@4.19.4

    at async ModuleLoader.import (node:internal/modules/esm/loader:473:24)

                 ^
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:146:21)
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:146:21)
SyntaxError: The requested module 'whatsapp-web.js' does not provide an export named 'LocalAuth'
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:122:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:473:24)
Node.js v20.18.1

                 ^
command finished with error [sh -c NODE_ENV=production PORT=8080 npx tsx src/server/index.ts]: exit status 1


/home/runner/workspace/src/server/services/whatsapp.ts:2
command finished with error [sh -c NODE_ENV=production PORT=8080 npx tsx src/server/index.ts]: exit status 1
    at async ModuleLoader.import (node:internal/modules/esm/loader:473:24)

    at async ModuleJob.run (node:internal/modules/esm/module_job:229:5)
crash loop detected
command finished with error [sh -c NODE_ENV=production PORT=8080 npx tsx src/server/index.ts]: exit status 1
2025-05-28T03:47:35Z error: The deployment is crash looping. This can happen if the run command fails or exits immediately after starting. Check the logs for more information.